Finished clustering analysis

--- a/src/r/convert_seurat_to_h5ad.Rmd
+++ b/src/r/convert_seurat_to_h5ad.Rmd
@@ -14,24 +14,47 @@ I'm trying to use `phateR`, but keep on running into errors when transforming th
 rm(list=ls())
 library(Seurat)
 library(scater)
+library(tidyverse)
 
-install.packages("devtools")
-devtools::install_github(repo="hhoeflin/hdf5r")
-devtools::install_github(repo="mojaveazure/loomR", 
-                         ref="develop")
+#install.packages("devtools")
+#devtools::install_github(repo="hhoeflin/hdf5r")
+#devtools::install_github(repo="mojaveazure/loomR", 
+#                         ref="develop")
 library(loomR)
+```
 
+# 1. Save Entire Data As loom File
+```{r}
 # Load Seurat object as is
 load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
 lung.loom = Seurat::as.loom(lung,filename="C:/Users/scott/Data/scRNASeq/shea/lung.loom")
 ```
 
-So I tried several ways to import/export the data, but they all kind of suck. So I'm doing it the old school way and saving everything using text and .csv files.
-
+# 2. Save Entire Dataset as .csv Files
+Now we'll save the count data, the gene symbols, and the cell type as several csv files.
 ```{r}
-data = lung@assays$RNA@counts
-metadata = data.frame(character(lengthlung@meta.data$phenotype))
-metadata$allcelltype = lung@meta.data$phenotype
-tmp = as.data.frame(lung@active.ident)
+load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
 
+# Count data
+data = lung@assays$RNA@counts
+data = as.data.frame(data)
+write_delim(data, 
+            "C:/Users/scott/Data/scRNASeq/shea/lung.csv",
+            delim=',')
+
+# Gene Symbol Data
+MGI.Symbol = as.data.frame(rownames(data))
+write_delim(MGI.Symbol, 
+            "C:/Users/scott/Data/scRNASeq/shea/symbol.csv",
+            delim=",")
+
+# Cell identification data
+active_indent = as.data.frame(lung@active.ident)
+active_indent$true_ident = rownames(active_indent)
+rownames(active_indent) = NULL
+write_delim(x=active_indent,
+            file="C:/Users/scott/Data/scRNASeq/shea/active_ident.csv",
+            delim=',')
 ```
+# 3. Save Subsets as Separate .csv Files
+To perform data imputation and to save on memory, let's separate the data.
