Finished phate pipeline

--- a/src/python/phate.ipynb
+++ b/src/python/phate.ipynb
@@ -750,6 +750,13 @@
    "metadata": {}
   },
   {
+   "source": [
+    "First, let's define a function to compute some robust standardized data using the robust Z-score method."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -760,6 +767,13 @@
     "\n",
     "def robust_zscore(df):\n",
     "    \"\"\"\n",
+    "    robust_zscore computes a modified version of the Z-score centered around the media and scaled by the median absolute deviation.\n",
+    "    INPUT:\n",
+    "      :param df: A data frame corresponding to numerical values where rows correspond to cells and columns correspond to genes.\n",
+    "    OUTPUTS:\n",
+    "      :output Z: A data frame of the robust Z-scores.\n",
+    "      :output pval: A data frame of the p-values corresponding to the robust Z-scores.\n",
+    "\n",
     "    \"\"\"\n",
     "    # Compute model parameters\n",
     "    mu = df.median(axis=0)\n",
@@ -768,54 +782,104 @@
     "    scale_factor = 1.4826\n",
     "\n",
     "    # Compute robust Z-score\n",
-    "    Z = (nk_magic - mu) / (med_abs_dev * scale_factor)\n",
+    "    Z = (df - mu) / (med_abs_dev * scale_factor)\n",
     "\n",
     "    # Compute P-value based on Z-score\n",
     "    pval = norm.sf(abs(Z))*2 \n",
     "    pval = pd.DataFrame(pval,\n",
     "                    index=df.index,\n",
     "                    columns=df.columns)\n",
-    "\n",
     "    return(Z, pval)"
    ]
   },
   {
+   "source": [
+    "Next, we'll define a function that runs the MAGIC pipeline described above."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def MAGIC_pipeline(df):\n",
     "    \"\"\"\n",
+    "    MAGIC_pipeline performs data preprocessing, MAGIC imputation, and data standardization.\n",
+    "    INPUT: \n",
+    "      :param df: A pandas dataframe of the raw counts data.\n",
+    "    OUTPUT:\n",
+    "      :param Z: A pandas dataframe of the Z-scores that reach a p-value threshold less than 0.05.\n",
     "    \"\"\"\n",
     "    # Drop symbols\n",
-    "    symbols = counts[\"Symbol\"]\n",
-    "    counts = counts.drop(\"Symbol\", axis=1)\n",
+    "    symbols = df[\"Symbol\"]\n",
+    "    df = df.drop(\"Symbol\", axis=1)\n",
     "\n",
     "    # Grab cell names\n",
-    "    celltype = counts.columns\n",
+    "    celltype = df.columns\n",
     "\n",
-    "    counts = counts.transpose()\n",
-    "    counts = counts.reset_index()\n",
-    "    counts = counts.drop('index', axis=1)\n",
+    "    # Annotate and configure data\n",
+    "    df = df.transpose()\n",
+    "    df = df.reset_index()\n",
+    "    df = df.drop('index', axis=1)\n",
+    "    df.columns = symbols\n",
+    "    df.index = celltype\n",
     "\n",
-    "    counts.columns = symbols\n",
-    "    counts.index = celltype\n",
+    "    # Perform some data filtering\n",
+    "    df = scprep.filter.filter_library_size(df, cutoff=500)\n",
+    "    df = scprep.filter.remove_rare_genes(df, cutoff=0, min_cells=5)\n",
     "\n",
-    "    counts = scprep.filter.filter_library_size(counts, cutoff=500)\n",
-    "    counts = scprep.filter.remove_rare_genes(counts, cutoff=0, min_cells=5)\n",
+    "    # Perform count normalization and square root transformation.\n",
+    "    df = scprep.normalize.library_size_normalize(df)\n",
+    "    df = scprep.transform.sqrt(df)\n",
     "\n",
-    "    counts = scprep.normalize.library_size_normalize(counts)\n",
-    "    counts = scprep.transform.sqrt(counts)\n",
-    "\n",
+    "    # Data imputation with MAGIC\n",
     "    magic_op = magic.MAGIC()\n",
-    "    nk_magic = magic_op.fit_transform(counts, genes=\"all_genes\")\n",
+    "    magic_data = magic_op.fit_transform(df, genes=\"all_genes\")\n",
+    "    magic_data = magic_data.round(decimals=4)\n",
     "\n",
-    "    nk_magic = nk_magic.round(decimals=4)\n",
+    "    # Compute Z-scores\n",
+    "    Z, pvalue = robust_zscore(magic_data)\n",
+    "    Z[pvalue > 0.05] = np.NaN\n",
     "\n",
+    "    return(Z)"
+   ]
+  },
+  {
+   "source": [
+    "Finally, let's iterate this pipeline across all cell types. I ended up having to delete the cache for memory intensive purposes."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'MAGIC_pipeline' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-6d72ca930326>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     counts = pd.read_excel(datapath, \n\u001b[0;32m      3\u001b[0m                         sheet_name=celltypes)\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMAGIC_pipeline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mdel\u001b[0m \u001b[0mcounts\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'MAGIC_pipeline' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for celltypes in wb.sheetnames: \n",
+    "    counts = pd.read_excel(datapath, \n",
+    "                        sheet_name=celltypes)\n",
+    "    Z = MAGIC_pipeline(counts)\n",
+    "    del counts\n",
     "\n",
-    "\n",
-    "\n",
+    "    Z.to_csv('C:/Users/scott/Analysis/Immune/'+celltypes+'_magic.csv')\n",
+    "    del Z\n",
     "\n"
    ]
   }
