Add single cell COBRA

--- a/src/r/subpopulation_analysis.Rmd
+++ b/src/r/subpopulation_analysis.Rmd
@@ -46,10 +46,10 @@ library(reticulate)
 rm(list=ls())
 # Load the data
 # Dell
-#load("D:/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+load("D:/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
 
 # ACLX
-load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+#load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
 
 # Linux
 #load("~/Data/scRNASeq/shea/lung.Robj")
