Added some additional Dell-specific code

--- a/src/r/pseudotime.Rmd
+++ b/src/r/pseudotime.Rmd
@@ -31,15 +31,15 @@ library(reticulate)
 library(readxl)
 
 # Monocle3 is still in beta
-#BiocManager::install(c('BiocGenerics', 'DelayedArray', 'DelayedMatrixStats',
-#                       'limma', 'S4Vectors', 'SingleCellExperiment',
-#                       'SummarizedExperiment', 'batchelor', 'Matrix.utils'))
+BiocManager::install(c('BiocGenerics', 'DelayedArray', 'DelayedMatrixStats',
+                       'limma', 'S4Vectors', 'SingleCellExperiment',
+                       'SummarizedExperiment', 'batchelor', 'Matrix.utils'))
 #install.packages("devtools")
 library(devtools)
-#devtools::install_github('cole-trapnell-lab/leidenbase')
-devtools::install_github('cole-trapnell-lab/monocle3')
+devtools::install_github('cole-trapnell-lab/leidenbase', dependencies=TRUE)
+devtools::install_github('cole-trapnell-lab/monocle3', dependencies=TRUE)
 
-#remotes::install_github('satijalab/seurat-wrappers')
+remotes::install_github('satijalab/seurat-wrappers')
 
 library(SeuratWrappers)
 library(monocle3)
