--- a/src/python/phate.ipynb
+++ b/src/python/phate.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,8 @@
     "      :param Z: A pandas dataframe of the Z-scores that reach a p-value threshold less than 0.05.\n",
     "    \"\"\"\n",
     "    # Drop symbols\n",
-    "    ids = df[\"Gene.stable.ID\"]\n",
+    "    df = df[df['NCBI.gene..formerly.Entrezgene..ID'].notna()]\n",
+    "    ids = df[\"NCBI.gene..formerly.Entrezgene..ID\"]\n",
     "    df = df.drop(['MGI.symbol', \n",
     "                  'HGNC.symbol', \n",
     "                  'NCBI.gene..formerly.Entrezgene..ID', \n",
@@ -913,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -921,159 +922,161 @@
      "name": "stdout",
      "text": [
       "Calculating MAGIC...\n",
-      "  Running MAGIC on 190 cells and 2922 genes.\n",
+      "  Running MAGIC on 176 cells and 2686 genes.\n",
       "  Calculating graph and diffusion operator...\n",
       "    Calculating PCA...\n",
-      "    Calculated PCA in 0.19 seconds.\n",
+      "    Calculated PCA in 0.24 seconds.\n",
+      "    Calculating KNN search...\n",
+      "    Calculated KNN search in 0.01 seconds.\n",
+      "    Calculating affinities...\n",
+      "  Calculated graph and diffusion operator in 0.27 seconds.\n",
+      "  Calculating imputation...\n",
+      "Calculated MAGIC in 0.29 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 531 cells and 9565 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating PCA...\n",
+      "    Calculated PCA in 0.51 seconds.\n",
+      "    Calculating KNN search...\n",
+      "    Calculated KNN search in 0.03 seconds.\n",
+      "    Calculating affinities...\n",
+      "    Calculated affinities in 0.03 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.60 seconds.\n",
+      "  Running MAGIC with `solver='exact'` on 9565-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
+      "  Calculating imputation...\n",
+      "  Calculated imputation in 0.06 seconds.\n",
+      "Calculated MAGIC in 0.69 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 377 cells and 6283 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating PCA...\n",
+      "    Calculated PCA in 0.53 seconds.\n",
+      "    Calculating KNN search...\n",
+      "    Calculated KNN search in 0.02 seconds.\n",
+      "    Calculating affinities...\n",
+      "    Calculated affinities in 0.03 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.60 seconds.\n",
+      "  Running MAGIC with `solver='exact'` on 6283-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
+      "  Calculating imputation...\n",
+      "  Calculated imputation in 0.10 seconds.\n",
+      "Calculated MAGIC in 0.72 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 629 cells and 9144 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating PCA...\n",
+      "    Calculated PCA in 0.52 seconds.\n",
+      "    Calculating KNN search...\n",
+      "    Calculated KNN search in 0.04 seconds.\n",
+      "    Calculating affinities...\n",
+      "    Calculated affinities in 0.04 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.63 seconds.\n",
+      "  Running MAGIC with `solver='exact'` on 9144-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
+      "  Calculating imputation...\n",
+      "  Calculated imputation in 0.08 seconds.\n",
+      "Calculated MAGIC in 0.73 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 129 cells and 2864 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating PCA...\n",
+      "    Calculated PCA in 0.20 seconds.\n",
       "    Calculating KNN search...\n",
       "    Calculating affinities...\n",
       "  Calculated graph and diffusion operator in 0.21 seconds.\n",
       "  Calculating imputation...\n",
       "Calculated MAGIC in 0.23 seconds.\n",
       "Calculating MAGIC...\n",
-      "  Running MAGIC on 537 cells and 9835 genes.\n",
+      "  Running MAGIC on 614 cells and 8347 genes.\n",
       "  Calculating graph and diffusion operator...\n",
       "    Calculating PCA...\n",
-      "    Calculated PCA in 0.49 seconds.\n",
+      "    Calculated PCA in 0.75 seconds.\n",
       "    Calculating KNN search...\n",
-      "    Calculated KNN search in 0.03 seconds.\n",
+      "    Calculated KNN search in 0.05 seconds.\n",
       "    Calculating affinities...\n",
-      "    Calculated affinities in 0.03 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.58 seconds.\n",
-      "  Running MAGIC with `solver='exact'` on 9835-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
-      "  Calculating imputation...\n",
-      "  Calculated imputation in 0.07 seconds.\n",
-      "Calculated MAGIC in 0.69 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 384 cells and 6489 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating PCA...\n",
-      "    Calculated PCA in 0.30 seconds.\n",
-      "    Calculating KNN search...\n",
-      "    Calculated KNN search in 0.02 seconds.\n",
-      "    Calculating affinities...\n",
-      "    Calculated affinities in 0.02 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.35 seconds.\n",
-      "  Running MAGIC with `solver='exact'` on 6489-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
-      "  Calculating imputation...\n",
-      "  Calculated imputation in 0.02 seconds.\n",
-      "Calculated MAGIC in 0.40 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 643 cells and 9440 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating PCA...\n",
-      "    Calculated PCA in 0.56 seconds.\n",
-      "    Calculating KNN search...\n",
-      "    Calculated KNN search in 0.04 seconds.\n",
-      "    Calculating affinities...\n",
-      "    Calculated affinities in 0.05 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.68 seconds.\n",
-      "  Running MAGIC with `solver='exact'` on 9440-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
+      "    Calculated affinities in 0.04 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.87 seconds.\n",
+      "  Running MAGIC with `solver='exact'` on 8347-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
       "  Calculating imputation...\n",
       "  Calculated imputation in 0.09 seconds.\n",
-      "Calculated MAGIC in 0.81 seconds.\n",
+      "Calculated MAGIC in 1.01 seconds.\n",
       "Calculating MAGIC...\n",
-      "  Running MAGIC on 135 cells and 3062 genes.\n",
+      "  Running MAGIC on 216 cells and 4025 genes.\n",
       "  Calculating graph and diffusion operator...\n",
       "    Calculating PCA...\n",
-      "    Calculated PCA in 0.15 seconds.\n",
+      "    Calculated PCA in 0.31 seconds.\n",
       "    Calculating KNN search...\n",
       "    Calculating affinities...\n",
-      "  Calculated graph and diffusion operator in 0.16 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.34 seconds.\n",
       "  Calculating imputation...\n",
-      "Calculated MAGIC in 0.17 seconds.\n",
+      "  Calculated imputation in 0.03 seconds.\n",
+      "Calculated MAGIC in 0.38 seconds.\n",
       "Calculating MAGIC...\n",
-      "  Running MAGIC on 625 cells and 9567 genes.\n",
+      "  Running MAGIC on 518 cells and 8501 genes.\n",
       "  Calculating graph and diffusion operator...\n",
       "    Calculating PCA...\n",
-      "    Calculated PCA in 0.68 seconds.\n",
-      "    Calculating KNN search...\n",
-      "    Calculated KNN search in 0.04 seconds.\n",
-      "    Calculating affinities...\n",
-      "    Calculated affinities in 0.05 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.79 seconds.\n",
-      "  Running MAGIC with `solver='exact'` on 9567-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
-      "  Calculating imputation...\n",
-      "  Calculated imputation in 0.08 seconds.\n",
-      "Calculated MAGIC in 0.91 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 223 cells and 4227 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating PCA...\n",
-      "    Calculated PCA in 0.20 seconds.\n",
-      "    Calculating KNN search...\n",
-      "    Calculating affinities...\n",
-      "  Calculated graph and diffusion operator in 0.22 seconds.\n",
-      "  Calculating imputation...\n",
-      "Calculated MAGIC in 0.24 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 521 cells and 8794 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating PCA...\n",
-      "    Calculated PCA in 0.45 seconds.\n",
+      "    Calculated PCA in 0.70 seconds.\n",
       "    Calculating KNN search...\n",
       "    Calculated KNN search in 0.03 seconds.\n",
       "    Calculating affinities...\n",
       "    Calculated affinities in 0.03 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.53 seconds.\n",
-      "  Running MAGIC with `solver='exact'` on 8794-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
+      "  Calculated graph and diffusion operator in 0.78 seconds.\n",
+      "  Running MAGIC with `solver='exact'` on 8501-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
       "  Calculating imputation...\n",
-      "  Calculated imputation in 0.05 seconds.\n",
-      "Calculated MAGIC in 0.62 seconds.\n",
+      "  Calculated imputation in 0.07 seconds.\n",
+      "Calculated MAGIC in 0.89 seconds.\n",
       "Calculating MAGIC...\n",
-      "  Running MAGIC on 81 cells and 2817 genes.\n",
+      "  Running MAGIC on 80 cells and 2706 genes.\n",
       "  Calculating graph and diffusion operator...\n",
       "    Calculating KNN search...\n",
       "    Calculated KNN search in 0.03 seconds.\n",
       "    Calculating affinities...\n",
       "    Calculated affinities in 0.02 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.05 seconds.\n",
+      "  Calculating imputation...\n",
+      "Calculated MAGIC in 0.06 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 3129 cells and 9896 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating PCA...\n",
+      "    Calculated PCA in 2.50 seconds.\n",
+      "    Calculating KNN search...\n",
+      "    Calculated KNN search in 1.31 seconds.\n",
+      "    Calculating affinities...\n",
+      "    Calculated affinities in 1.13 seconds.\n",
+      "  Calculated graph and diffusion operator in 5.06 seconds.\n",
+      "  Running MAGIC with `solver='exact'` on 9896-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
+      "  Calculating imputation...\n",
+      "  Calculated imputation in 1.75 seconds.\n",
+      "Calculated MAGIC in 6.93 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 150 cells and 3930 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating PCA...\n",
+      "    Calculated PCA in 0.17 seconds.\n",
+      "    Calculating KNN search...\n",
+      "    Calculating affinities...\n",
+      "  Calculated graph and diffusion operator in 0.19 seconds.\n",
+      "  Calculating imputation...\n",
+      "Calculated MAGIC in 0.20 seconds.\n",
+      "Calculating MAGIC...\n",
+      "  Running MAGIC on 75 cells and 3603 genes.\n",
+      "  Calculating graph and diffusion operator...\n",
+      "    Calculating KNN search...\n",
+      "    Calculated KNN search in 0.03 seconds.\n",
+      "    Calculating affinities...\n",
+      "    Calculated affinities in 0.03 seconds.\n",
       "  Calculated graph and diffusion operator in 0.06 seconds.\n",
       "  Calculating imputation...\n",
-      "Calculated MAGIC in 0.07 seconds.\n",
+      "Calculated MAGIC in 0.08 seconds.\n",
       "Calculating MAGIC...\n",
-      "  Running MAGIC on 3146 cells and 10236 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating PCA...\n",
-      "    Calculated PCA in 2.73 seconds.\n",
-      "    Calculating KNN search...\n",
-      "    Calculated KNN search in 0.98 seconds.\n",
-      "    Calculating affinities...\n",
-      "    Calculated affinities in 0.99 seconds.\n",
-      "  Calculated graph and diffusion operator in 4.80 seconds.\n",
-      "  Running MAGIC with `solver='exact'` on 10236-dimensional data may take a long time. Consider denoising specific genes with `genes=<list-like>` or using `solver='approximate'`.\n",
-      "  Calculating imputation...\n",
-      "  Calculated imputation in 1.63 seconds.\n",
-      "Calculated MAGIC in 6.55 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 152 cells and 4072 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating PCA...\n",
-      "    Calculated PCA in 0.16 seconds.\n",
-      "    Calculating KNN search...\n",
-      "    Calculating affinities...\n",
-      "  Calculated graph and diffusion operator in 0.17 seconds.\n",
-      "  Calculating imputation...\n",
-      "Calculated MAGIC in 0.19 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 75 cells and 3694 genes.\n",
+      "  Running MAGIC on 70 cells and 2686 genes.\n",
       "  Calculating graph and diffusion operator...\n",
       "    Calculating KNN search...\n",
       "    Calculated KNN search in 0.03 seconds.\n",
       "    Calculating affinities...\n",
       "    Calculated affinities in 0.02 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.06 seconds.\n",
+      "  Calculated graph and diffusion operator in 0.05 seconds.\n",
       "  Calculating imputation...\n",
-      "Calculated MAGIC in 0.07 seconds.\n",
-      "Calculating MAGIC...\n",
-      "  Running MAGIC on 71 cells and 2763 genes.\n",
-      "  Calculating graph and diffusion operator...\n",
-      "    Calculating KNN search...\n",
-      "    Calculated KNN search in 0.02 seconds.\n",
-      "    Calculating affinities...\n",
-      "    Calculated affinities in 0.02 seconds.\n",
-      "  Calculated graph and diffusion operator in 0.04 seconds.\n",
-      "  Calculating imputation...\n",
-      "Calculated MAGIC in 0.05 seconds.\n"
+      "Calculated MAGIC in 0.07 seconds.\n"
      ]
     }
    ],
@@ -1088,7 +1091,7 @@
     "    #Z.to_csv('C:/Users/scott/Analysis/Immune/'+celltypes+'_magic.csv')\n",
     "\n",
     "    # Dell\n",
-    "    Z.to_csv('D:/Analysis/Immune/'+celltypes+'_magic.csv')\n",
+    "    Z.to_csv('D:/Analysis/Immune/magic_entrez/'+celltypes+'_magic.csv')\n",
     "\n",
     "    del Z"
    ]
